--- a/FrontEnd/one-solution/public/manifest.json
+++ b/FrontEnd/one-solution/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "One Solution",
+  "name": "One Solution",
   "icons": [
     {
       "src": "favicon.ico",
